Added two new biomes - Added vigilant forest - Added deceitful bog - Fixed some more bugs in BiomeColorCache - Added coarse dirt

--- a/MidnightMod/src/main/resources/assets/midnight/lang/de_de.json
+++ b/MidnightMod/src/main/resources/assets/midnight/lang/de_de.json
@@ -8,6 +8,7 @@
   "block.midnight.deceitful_mud": "Betrügerischer Schlamm",
   "block.midnight.strange_sand": "Fremder Sand",
   "block.midnight.dark_water": "Dunkel Wasser",
+  "block.midnight.coarse_night_dirt": "Grober Nachterde",
 
   "itemGroup.midnight.blocks": "Midnight Blöcke",
   "itemGroup.midnight.decor": "Midnight Dekorationen",
