--- a/MidnightMod/src/main/resources/assets/midnight/lang/lol_us.json
+++ b/MidnightMod/src/main/resources/assets/midnight/lang/lol_us.json
@@ -8,6 +8,7 @@
   "block.midnight.deceitful_mud": "Fool md",
   "block.midnight.strange_sand": "wird litter box stuffs",
   "block.midnight.dark_water": "Dark Watr",
+  "block.midnight.coarse_night_dirt": "Korz nite durt",
 
   "itemGroup.midnight.blocks": "Midnite blukz",
   "itemGroup.midnight.decor": "Midnite thingys",
