--- a/MidnightMod/src/main/resources/assets/midnight/lang/en_us.json
+++ b/MidnightMod/src/main/resources/assets/midnight/lang/en_us.json
@@ -8,6 +8,7 @@
   "block.midnight.deceitful_mud": "Deceitful Mud",
   "block.midnight.strange_sand": "Strange Sand",
   "block.midnight.dark_water": "Dark Water",
+  "block.midnight.coarse_night_dirt": "Coarse Night Dirt",
 
   "itemGroup.midnight.blocks": "Midnight Blocks",
   "itemGroup.midnight.decor": "Midnight Decorations",
