--- a/MidnightMod/src/main/resources/assets/midnight/lang/nl_nl.json
+++ b/MidnightMod/src/main/resources/assets/midnight/lang/nl_nl.json
@@ -8,6 +8,7 @@
   "block.midnight.deceitful_mud": "Bedriegelijke Modder",
   "block.midnight.strange_sand": "Onwennig Zand",
   "block.midnight.dark_water": "Donker Water",
+  "block.midnight.coarse_night_dirt": "Grove Nachtaarde",
 
   "itemGroup.midnight.blocks": "Midnight Blokken",
   "itemGroup.midnight.decor": "Midnight Decoraties",
